{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 26,
  "lineage": "97b4743e-d3a1-585b-86eb-ae3524b8fd34",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654280844:network-acl/acl-01c5cb032218585f3",
            "default_network_acl_id": "acl-01c5cb032218585f3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01c5cb032218585f3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "654654280844",
            "subnet_ids": [
              "subnet-048d05556d8e51e14",
              "subnet-07e96eb0e9cdea64b",
              "subnet-0aee262bbebd1cd7a",
              "subnet-0c313b2b914d1e404",
              "subnet-0c9fb8b0cf7777c7c",
              "subnet-0e5bd0e50eccbaa23"
            ],
            "tags": {
              "Name": "HR-stag-myvpc-default",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-default",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-054179bd4005d8f21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654280844:route-table/rtb-0e475897be9069e66",
            "default_route_table_id": "rtb-0e475897be9069e66",
            "id": "rtb-0e475897be9069e66",
            "owner_id": "654654280844",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "HR-stag-myvpc-default",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-default",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-054179bd4005d8f21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654280844:security-group/sg-0c563d4b54a3b1cf7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c563d4b54a3b1cf7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "654654280844",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HR-stag-myvpc-default",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-default",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-054179bd4005d8f21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d6f599160299c99",
            "domain": "vpc",
            "id": "eipalloc-03d6f599160299c99",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-169-57-132.compute-1.amazonaws.com",
            "public_ip": "35.169.57.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "HR-stag-myvpc-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654280844:internet-gateway/igw-0d972f864184b9165",
            "id": "igw-0d972f864184b9165",
            "owner_id": "654654280844",
            "tags": {
              "Name": "HR-stag-myvpc",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-054179bd4005d8f21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d6f599160299c99",
            "association_id": "eipassoc-0edf0a5a4971f0b18",
            "connectivity_type": "public",
            "id": "nat-03d31630e2f2464d3",
            "network_interface_id": "eni-018d5bb5eeed42ccc",
            "private_ip": "10.0.101.48",
            "public_ip": "35.169.57.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-048d05556d8e51e14",
            "tags": {
              "Name": "HR-stag-myvpc-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0992cbe19246517a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03d31630e2f2464d3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0992cbe19246517a3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d972f864184b9165",
            "id": "r-rtb-0ddcc83075f3daafb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ddcc83075f3daafb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654280844:route-table/rtb-033f93128d941045c",
            "id": "rtb-033f93128d941045c",
            "owner_id": "654654280844",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-stag-myvpc-db",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-db",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-054179bd4005d8f21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654280844:route-table/rtb-0992cbe19246517a3",
            "id": "rtb-0992cbe19246517a3",
            "owner_id": "654654280844",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-stag-myvpc-private",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-private",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-054179bd4005d8f21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654280844:route-table/rtb-0ddcc83075f3daafb",
            "id": "rtb-0ddcc83075f3daafb",
            "owner_id": "654654280844",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-stag-myvpc-public",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-public",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-054179bd4005d8f21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c626f3f691d295a",
            "route_table_id": "rtb-033f93128d941045c",
            "subnet_id": "subnet-07e96eb0e9cdea64b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0453f338844981716",
            "route_table_id": "rtb-033f93128d941045c",
            "subnet_id": "subnet-0aee262bbebd1cd7a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad85f01325e28635",
            "route_table_id": "rtb-0992cbe19246517a3",
            "subnet_id": "subnet-0c313b2b914d1e404"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffed397df380b378",
            "route_table_id": "rtb-0992cbe19246517a3",
            "subnet_id": "subnet-0e5bd0e50eccbaa23"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f18be9b49756cce0",
            "route_table_id": "rtb-0ddcc83075f3daafb",
            "subnet_id": "subnet-048d05556d8e51e14"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0167fa93ad12f2b42",
            "route_table_id": "rtb-0ddcc83075f3daafb",
            "subnet_id": "subnet-0c9fb8b0cf7777c7c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654280844:subnet/subnet-07e96eb0e9cdea64b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e96eb0e9cdea64b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654280844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-myvpc-db-us-east-1a",
              "environment": "stag",
              "owners": "HR",
              "type": "database-subnets"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-db-us-east-1a",
              "environment": "stag",
              "owners": "HR",
              "type": "database-subnets"
            },
            "vpc_id": "vpc-054179bd4005d8f21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654280844:subnet/subnet-0aee262bbebd1cd7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aee262bbebd1cd7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654280844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-myvpc-db-us-east-1b",
              "environment": "stag",
              "owners": "HR",
              "type": "database-subnets"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-db-us-east-1b",
              "environment": "stag",
              "owners": "HR",
              "type": "database-subnets"
            },
            "vpc_id": "vpc-054179bd4005d8f21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654280844:subnet/subnet-0c313b2b914d1e404",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c313b2b914d1e404",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654280844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-myvpc-private-us-east-1a",
              "environment": "stag",
              "owners": "HR",
              "type": "private-subnets"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-private-us-east-1a",
              "environment": "stag",
              "owners": "HR",
              "type": "private-subnets"
            },
            "vpc_id": "vpc-054179bd4005d8f21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654280844:subnet/subnet-0e5bd0e50eccbaa23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5bd0e50eccbaa23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654280844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-myvpc-private-us-east-1b",
              "environment": "stag",
              "owners": "HR",
              "type": "private-subnets"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-private-us-east-1b",
              "environment": "stag",
              "owners": "HR",
              "type": "private-subnets"
            },
            "vpc_id": "vpc-054179bd4005d8f21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654280844:subnet/subnet-048d05556d8e51e14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048d05556d8e51e14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654280844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-myvpc-public-us-east-1a",
              "environment": "stag",
              "owners": "HR",
              "type": "public-subnets"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-public-us-east-1a",
              "environment": "stag",
              "owners": "HR",
              "type": "public-subnets"
            },
            "vpc_id": "vpc-054179bd4005d8f21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654280844:subnet/subnet-0c9fb8b0cf7777c7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9fb8b0cf7777c7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654280844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-myvpc-public-us-east-1b",
              "environment": "stag",
              "owners": "HR",
              "type": "public-subnets"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-public-us-east-1b",
              "environment": "stag",
              "owners": "HR",
              "type": "public-subnets"
            },
            "vpc_id": "vpc-054179bd4005d8f21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654280844:vpc/vpc-054179bd4005d8f21",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c5cb032218585f3",
            "default_route_table_id": "rtb-0e475897be9069e66",
            "default_security_group_id": "sg-0c563d4b54a3b1cf7",
            "dhcp_options_id": "dopt-0025ea054f3755d13",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054179bd4005d8f21",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e475897be9069e66",
            "owner_id": "654654280844",
            "tags": {
              "Name": "HR-stag-myvpc",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc",
              "environment": "stag",
              "owners": "HR"
            }
          }
        }
      ]
    }
  ]
}